# secondbrain

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: ab_embedding.py  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 11c6c96cd8c0_sprint_3_empresas_facts_promesas_.py  580e06d66386_sprint_2_5_personas_seguir_core_.py  6cdb5bcf75e8_sprint_2_5_personas_seguir_default_.py  a88a6d0e567b_sprint1_schema_base.py
backend/app/: __init__.py  config.py  main.py
backend/app/core/: __init__.py  logging.py
backend/app/db/: __init__.py  session.py
backend/app/models/: __init__.py  core.py  media.py  processing.py  tagging.py
backend/app/routers/: __init__.py  bridge.py  chat.py  contacts.py  conversations.py  embeddings.py  extract.py  health.py  images.py  imports.py  panel.py  tagger.py  test.py  transcribe.py  worker.py
backend/app/schemas/: __init__.py
backend/app/services/: __init__.py  chat.py  embedder.py  extractor.py  imager.py  minio_client.py  ollama_client.py  phones.py  qdrant_client.py  queue_worker.py  retriever.py  tagger.py  transcriber.py  vcard_parser.py  whatsapp_parser.py  whisper_client.py
backend/tests/: test_smoke.py
bridge/: .dockerignore  .gitignore  README.md  package.json
bridge/src/: backend.js  config.js  index.js  server.js  whatsapp.js
docker/backend/: Dockerfile
docker/bridge/: Dockerfile
docker/frontend/: Dockerfile
docker/postgres/: init.sql
docs/: _build_overview_pdf.py  _build_pdf.py  architecture.md  pipeline.md  setup-windows.md  sprints.md
frontend/: app.py  pyproject.toml
frontend/.streamlit/: config.toml
frontend/lib/: __init__.py  api_client.py
frontend/pages/: 10_Audios.py  11_Documentos.py  12_Imagenes.py  13_Worker.py  1_Dashboard.py  2_Benchmark.py  3_Vault.py  4_Import_WhatsApp.py  5_Bridge_WhatsApp.py  6_Contactos.py  7_Conversaciones.py  8_Tagger.py  9_Chat.py
panel/: README.md  pyproject.toml
panel/secondbrain_panel/: __init__.py  api_client.py  app.py  config.py  docker_client.py  main_window.py  system_stats.py  worker_thread.py
panel/secondbrain_panel/tabs/: chats.py  colas.py  configuracion.py  servicios.py  sistema.py  tagger.py  worker.py
scripts/: benchmark_tagger.py  check-requirements.ps1  warmup-models.sh
