[project]
name = "secondbrain-frontend"
version = "0.1.0"
description = "SecondBrain - Panel admin con Streamlit"
readme = "../README.md"
requires-python = ">=3.12"
authors = [
    { name = "Damian Fagundez", email = "damian@workbench.com.ar" },
]

dependencies = [
    "streamlit>=1.40.0",
    "httpx>=0.27.0",
    "pandas>=2.2.0",
    "python-dateutil>=2.9.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
